# Nico_grasping

./: 3D_point_rotation.py  IR_sensor.py  README.md  msom.py  som.py
F5_STSp/: CMakeLists.txt  Connection.cpp  Connection.h  Define.h  NetworkUtils.cpp  NetworkUtils.h  NeuralGroup.cpp  NeuralGroup.h  NeuralNetwork.cpp  NeuralNetwork.h  json.hpp  main.cpp
F5_STSp/backend/: base64.h
F5_STSp/backend/flab/: Base.cpp  Base.h  Matrix.cpp  Matrix.h  Tensor.cpp  Tensor.h  Tensor3.cpp  Tensor3.h  Vector.cpp  Vector.h
F5_STSp/dataset/: Dataset.cpp  Dataset.h  DatasetConfig.h  StringUtils.cpp
F5_STSp/filters/: IFilter.h
F5_STSp/mns/: Dataset.cpp  ModelMNS.cpp  ModelMNS.h  Sequence.cpp  Sequence.h
F5_STSp/mns/data/fingers/: Trajectories.3.md
F5_STSp/mns/data/real/: Trajectories.3.md  Trajectories.3.vd
F5_STSp/mns/data/simulated/: Trajectories.3.md  Trajectories.3.vd
F5_STSp/som/: MSOM.cpp  MSOM.h  RecSOM.cpp  RecSOM.h  SOM.cpp  SOM.h
Mediapipe/: hand_tracker.py  nico_structure.py
NicoIK/: Trajectories.3.vd  camera_perspective.py  dataset_simulated.json  dummy.py  g_joint_stat.csv  i_joint_stat.csv  ik_solver.py  ik_stat.csv  nico_upper_rh6d_r.urdf  time_stat.csv
SOM/: msom.py  som.py
UBAL/model/: UBAL2_numpy.py  UBAL_numpy.py  UBAL_torch.py
data/: convert_text_file_to_json.py
data/histograms/: histogram_grasp_nico.py  rawdata_histograms.py  rawdata_histograms_drafting.py
data/power/: 1.txt  10.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
data/precision/: 1.txt  10.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
(+44 files in other folders)
